--- a/Project Reboot 3.0/Project Reboot 3.0.vcxproj
+++ b/Project Reboot 3.0/Project Reboot 3.0.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{69618184-b9db-4982-b4fe-f83e9bdd0555}</ProjectGuid>
     <RootNamespace>ProjectReboot30</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>BlackGS</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -203,6 +204,7 @@
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="DataChannel.cpp" />
     <ClCompile Include="DataTableFunctionLibrary.cpp" />
+    <ClCompile Include="DisableVehicles.cpp" />
     <ClCompile Include="extra.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="EngineTypes.cpp" />
@@ -332,6 +334,7 @@
     <ClInclude Include="DelegateCombinations.h" />
     <ClInclude Include="DelegateInstanceInterface.h" />
     <ClInclude Include="die.h" />
+    <ClInclude Include="DisableVehicles.h" />
     <ClInclude Include="discord.h" />
     <ClInclude Include="EnableIf.h" />
     <ClInclude Include="Engine.h" />
