--- a/.gitignore
+++ b/.gitignore
@@ -369,6 +369,7 @@ FodyWeavers.xsd
 Project Reboot 3.0/x64/Release/Project Reboot 3.0.tlog/CL.read.1.tlog
 Project Reboot 3.0/x64/Release/Project Reboot 3.0.tlog/link.read.1.tlog
 Project Reboot 3.0/x64/Release/Project Reboot 3.0.tlog/CL.write.1.tlog
+Project Reboot 3.0/settings.h
 Project Reboot 3.0e/x64/Release/vc143.pdb
 x64/Release/Project Reboot 3.0.pdb
 Project Reboot 3.0/x64/Release/Project Reboot 3.0.log
